# multimedia-gst-aml-drmbufferpool1

./: Config.in
gst-aml-drmbufferpool-1.0/: Makefile.am  configure.ac
gst-aml-drmbufferpool-1.0/src/: Makefile.am
gst-aml-drmbufferpool-1.0/src/bufferpool/: Makefile.am  gstdrmallocator.c  gstdrmallocator.h  gstdrmbufferpool.c  gstdrmbufferpool.h  gstdrmbufferpool.pc.in
